tests/lang/compile_fail/short_closure_type_mismatch.kojs
fn apply(x: Int, f: fn (Int) -> String) -> String
  f(x)
end

apply(5, x -> x + 1).print()
